# cipc

./: .clang-format  CMakeLists.txt
examples/tcp/: cipc_tcp_client.c  cipc_tcp_server.c
examples/zmq/: cipc_zmq_client.c  cipc_zmq_rep.c  cipc_zmq_req.c  cipc_zmq_server.c
include/: cipc.h
include/backend/: cipc_tcp.h  cipc_zmq.h
src/: cipc.c  main.c
src/backend/: cipc_tcp.c  cipc_zmq.c
